# lanxfer

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  client.rs  discovery.rs  interactive.rs  main.rs  picker.rs  progress.rs  protocol.rs  server.rs  storage.rs  ui.rs  updater.rs  util.rs  web.rs
web/: README.md  components.json  next.config.ts  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: transfer.tsx
web/components/ui/: button.tsx  progress.tsx
web/lib/: transfer-protocol.test.ts  transfer-protocol.ts
