[package]
name = "lanxfer"
version = "0.2.0"
edition = "2024"
description = "Fast resumable LAN file transfer CLI"
license = "MIT"
repository = "https://github.com/imbrahiam/lanxfer"
keywords = ["lan", "transfer", "file", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "6.0"
hostname = "0.4"
libc = "0.2"
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.38", default-features = false, features = ["disk"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "time", "sync"] }
uuid = { version = "1.18", features = ["v4"] }
walkdir = "2.5"
filetime = "0.2"
if-addrs = "0.15.0"
