[package]
name = "lanxfer"
version = "0.9.0"
edition = "2024"
description = "Fast resumable LAN file transfer CLI"
license = "MIT"
repository = "https://github.com/imbrahiam/lanxfer"
keywords = ["lan", "transfer", "file", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dirs = "6.0"
hostname = "0.4"
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"
sysinfo = { version = "0.38", default-features = false, features = ["disk"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "time", "sync"] }
uuid = { version = "1.18", features = ["v4"] }
walkdir = "2.5"
filetime = "0.2"
if-addrs = "0.15.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29"] }
crossterm = "0.29.0"
self_update = { version = "0.44.0", default-features = false, features = ["ureq", "rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
